--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="@dimen/dp_145"
         android:layout_marginRight="@dimen/dp_71"
         android:orientation="vertical"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,6 +25,7 @@
             android:visibility="visible" />.
 
         <EditText
+            android:visibility="gone"
             android:id="@+id/et_num"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,6 +43,7 @@
             android:textSize="@dimen/sp_21" />
 
         <EditText
+            android:visibility="gone"
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,6 +61,7 @@
             android:textSize="@dimen/sp_21" />
 
         <Button
+            android:visibility="gone"
             android:id="@+id/btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,6 +73,7 @@
             android:textSize="@dimen/sp_25" />
 
         <CheckBox
+            android:visibility="gone"
             android:id="@+id/chb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,6 +94,14 @@
 
         <TextView
             android:id="@+id/tv_token"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/dp_10"
+            android:textColor="#ffffff" />
+
+        <TextView
+            android:id="@+id/tv_id_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
