--- a/app/src/main/res/drawable/bg_btn_yuan.xml
+++ b/app/src/main/res/drawable/bg_btn_yuan.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- 填充的颜色 -->
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#ffffff" />
     <!-- android:radius 弧形的半径 -->
     <!-- 设置按钮的四个角为弧形 -->
     <corners android:radius="100dp" />
