更改为互联网基础分支

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -63,7 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_20"
-            android:text="版本：347583249"
+            android:text="版本:"
             android:textColor="#ffffff"
             android:textSize="@dimen/sp_22" />
 
@@ -74,7 +74,9 @@
             android:layout_marginTop="@dimen/dp_20"
             android:text="版本：347583249"
             android:textColor="#ffffff"
-            android:textSize="@dimen/sp_22" />
+            android:textSize="@dimen/sp_22"
+            android:visibility="gone" />
+
         <TextView
             android:id="@+id/tv_recordNum"
             android:layout_width="wrap_content"
@@ -82,7 +84,8 @@
             android:layout_marginTop="@dimen/dp_20"
             android:text="版本：347583249"
             android:textColor="#ffffff"
-            android:textSize="@dimen/sp_22" />
+            android:textSize="@dimen/sp_22"
+            android:visibility="gone" />
     </LinearLayout>
 
 
