--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -142,7 +142,7 @@
             android:text="接处警"
             android:textColor="#162D5A"
             android:textSize="@dimen/sp_20"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/btn_zhiling"
@@ -156,21 +156,9 @@
             android:text="指令通知"
             android:textColor="#162D5A"
             android:textSize="@dimen/sp_20"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
-        <Button
 
-            android:id="@+id/btn_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@null"
-            android:drawableTop="@drawable/setting"
-            android:drawablePadding="@dimen/dp_10"
-            android:gravity="center"
-            android:text="后台设置"
-            android:textColor="#162D5A"
-            android:textSize="@dimen/sp_20" />
     </LinearLayout>
 
     <LinearLayout
@@ -189,14 +177,24 @@
             android:drawablePadding="@dimen/dp_10"
             android:gravity="center"
             android:text="核查"
-            android:visibility="gone"
+            android:textColor="#162D5A"
+            android:textSize="@dimen/sp_20"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/btn_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@null"
+            android:drawableTop="@drawable/setting"
+            android:drawablePadding="@dimen/dp_10"
+            android:gravity="center"
+            android:text="后台设置"
             android:textColor="#162D5A"
             android:textSize="@dimen/sp_20" />
 
-
-
         <Button
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
